did a bunch lol

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,11 @@
         "string": "cpp",
         "ostream": "cpp",
         "array": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "*.tcc": "cpp",
+        "deque": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
